Pushing new version of website-diag

--- a/research/index.html
+++ b/research/index.html
@@ -259,7 +259,7 @@
             <img src="https://beta.diagnijmegen.nl/images/computational_pathology_social_image-480.png" class="card-img-top lazyload" style="height: 200px;">
             <div class="card-body" style="height: 250px;">
                 <h5 class="card-title"><a href="https://www.computationalpathologygroup.eu">Computational Pathology Group</a></h5>
-                <p class="card-text">The Computational Pathology Group develops, validates and deploys novel medical image analysis methods based on deep learning technology and focusing on computer-aided diagnosis. Application areas...</p>
+                <p class="card-text">The Computational Pathology Group develops, validates and deploys novel medical image analysis methods based on deep learning technology.</p>
             </div>
             <div class="card-footer">
               <a href="https://www.computationalpathologygroup.eu" class="btn btn-primary">Visit main website</a>
