--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
 <div class="container-home">
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron block-primary block-home">
+    <div class="jumbotron block-home">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -251,8 +251,8 @@
                     <p class="lead">The Diagnostic Image Analysis Group is part of the Departments of Radiology and Nuclear Medicine, Pathology, and Ophthalmology of Radboud University Medical Center. We develop computer algorithms to aid clinicians in the interpretation of medical images and thereby improve the diagnostic process.</p>
                 </div>
                 <div class="col-md-6">
-                    <figure class="figure img-fluid">
-                      <img alt="Automated tumor detection" class="figure-img img-fluid" src="https://beta.diagnijmegen.nl/images/general/ApplicationsOfDeepLearning.png">
+                    <figure class="figure">
+                      <img alt="Automated tumor detection" class="figure-img" src="https://beta.diagnijmegen.nl/images/general/ApplicationsOfDeepLearning.png">
                       <figcaption class="figure-caption text-right">Differnt applications of deep learning.</figcaption>
                     </figure>
                 </div>
