--- a/publications/bejn18a/index.html
+++ b/publications/bejn18a/index.html
@@ -8,7 +8,7 @@
     <link rel="canonical" href="https://beta.diagnijmegen.nl/publications/bejn18a/">
 
 
-    <title>Machine Learning Compared With Pathologist Assessment-Reply. - Diagnostic Image Analysis Group</title>
+    <title>Machine Learning Compared With Pathologist Assessment-Reply - Diagnostic Image Analysis Group</title>
 
 
     <!-- Search Engine -->
@@ -16,19 +16,19 @@
     <meta name="image" content="">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="Machine Learning Compared With Pathologist Assessment-Reply. - Diagnostic Image Analysis Group">
+    <meta itemprop="name" content="Machine Learning Compared With Pathologist Assessment-Reply - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="">
     <meta itemprop="image" content="">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Machine Learning Compared With Pathologist Assessment-Reply. - Diagnostic Image Analysis Group">
+    <meta name="twitter:title" content="Machine Learning Compared With Pathologist Assessment-Reply - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="Machine Learning Compared With Pathologist Assessment-Reply. - Diagnostic Image Analysis Group">
+    <meta property="og:title" content="Machine Learning Compared With Pathologist Assessment-Reply - Diagnostic Image Analysis Group">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
@@ -241,12 +241,12 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/">Home</a></li>
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/publications/">Publications</a></li>
-        <li class="breadcrumb-item">Machine Learning Compared With Pathologist Assessment-Reply.</li>
+        <li class="breadcrumb-item">Machine Learning Compared With Pathologist Assessment-Reply</li>
       </ol>
     </nav>
 </div>
     <div class="container">
-    <h1 class="page-title">Machine Learning Compared With Pathologist Assessment-Reply.</h1>
+    <h1 class="page-title">Machine Learning Compared With Pathologist Assessment-Reply</h1>
 
     <p class="lead">
             B.E. Bejnordi,             G. Litjens and J.A. van der Laak    </p>
