--- a/index.html
+++ b/index.html
@@ -239,21 +239,17 @@
 
 <div class="container-home">
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron block-home">
+    <div class="jumbotron block-home block-home-dense">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
-                    <h1 class="display-title">Diagnostic Image Analysis Group</h1>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-md-6">
+                    <h1 class="display-title">Diagnostic Image Analysis Group</h1>
                     <p class="lead">The Diagnostic Image Analysis Group is part of the Departments of Radiology and Nuclear Medicine, Pathology, and Ophthalmology of Radboud University Medical Center. We develop computer algorithms to aid clinicians in the interpretation of medical images and thereby improve the diagnostic process.</p>
                 </div>
                 <div class="col-md-6">
-                    <figure class="figure">
-                      <img alt="Automated tumor detection" class="figure-img" src="https://beta.diagnijmegen.nl/images/general/ApplicationsOfDeepLearning.png">
-                      <figcaption class="figure-caption text-right">Differnt applications of deep learning.</figcaption>
+                    <figure>
+                        <img alt="Best Poster Award MIDL 2019" class="figure-img" src="https://beta.diagnijmegen.nl/images/news/Thomas_award-768.jpg">
+                        <figcaption class="figure-caption text-right">Best Poster Award MIDL 2019. <a href="highlights/best-poster-midl19/">Read more &rarr;</a></figcaption>
                     </figure>
                 </div>
             </div>
