Pushing new version of website-diag

--- a/vacancies/dl-prediction-recurrence-tnbc/index.html
+++ b/vacancies/dl-prediction-recurrence-tnbc/index.html
@@ -249,8 +249,8 @@
     <h1 class="page-title">Deep Learning to predict recurrence in triple negative breast cancer (TNBC)</h1>
 
 
-    <p class="alert alert-info">This is a student project vacancy.</p>
-
+<!--         <p class="alert alert-info">This is a student project vacancy.</p>
+ -->
     <img src="https://beta.diagnijmegen.nl/images/vacancies/TNBC-student.png" alt="Deep Learning to predict recurrence in triple negative breast cancer (TNBC)" class="img-fluid">
 
     <div class="page-content">
