--- a/vacancies/deep-learning-for-the-differentiation-of-stic-lesions/index.html
+++ b/vacancies/deep-learning-for-the-differentiation-of-stic-lesions/index.html
@@ -249,8 +249,8 @@
     <h1 class="page-title">Deep Learning for the differentiation of STIC lesions</h1>
 
 
-    <p class="alert alert-info">This is a student project vacancy.</p>
-
+<!--         <p class="alert alert-info">This is a student project vacancy.</p>
+ -->
     <img src="https://beta.diagnijmegen.nl/images/vacancies/master_student_stic.jpg" alt="Deep Learning for the differentiation of STIC lesions" class="img-fluid">
 
     <div class="page-content">
