--- a/members/index.html
+++ b/members/index.html
@@ -467,11 +467,6 @@ This page is generated automatically. Please do not change the content of this p
     <h4 class="person-title"><small>Data Manager</small></h4>
 </div>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <a href="https://beta.diagnijmegen.nl/members/karel-gerbrands/"><img data-src="https://beta.diagnijmegen.nl/images/people/Karel_Gerbrands-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Karel Gerbrands"></a>
-    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/karel-gerbrands/">Karel Gerbrands</a></h3>
-    <h4 class="person-title"><small>Research Software Engineer</small></h4>
-</div>
-<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <a href="https://beta.diagnijmegen.nl/members/maud-wekking/"><img data-src="https://beta.diagnijmegen.nl/images/people/Maud_Wekking-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Maud Wekking"></a>
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/maud-wekking/">Maud Wekking</a></h3>
     <h4 class="person-title"><small>Research technician</small></h4>
@@ -544,6 +539,8 @@ This page is generated automatically. Please do not change the content of this p
                             <li><a href="https://beta.diagnijmegen.nl/members/jeffrey-hoven/">Jeffrey Hoven</a></li>
 
                             <li><a href="https://beta.diagnijmegen.nl/members/jim-winkens/">Jim Winkens</a></li>
+
+                            <li><a href="https://beta.diagnijmegen.nl/members/karel-gerbrands/">Karel Gerbrands</a></li>
 
                             <li><a href="https://beta.diagnijmegen.nl/members/marjolijn-den-boer/">Marjolijn den Boer</a></li>
 
