Pushing new version of website-diag

--- a/members/marcel-oei/index.html
+++ b/members/marcel-oei/index.html
@@ -301,7 +301,7 @@
                   <dt>Member of:</dt>
                   <dd>
                     <ul>
-                        <li><a href="https://diagnijmegen.github.io/website-neuro">Neuroimage Analysis Group</a></li>
+                        <li><a href="https://diagnijmegen.github.io/website-neuro">NeuroImaging</a></li>
                     </ul>
                   </dd>
             </dl>
