--- a/research/index.html
+++ b/research/index.html
@@ -306,8 +306,8 @@
         <div class="card" >
             <img src="https://beta.diagnijmegen.nl/images/missing_picture_social-480.png" class="card-img-top lazyload" style="height: 200px;">
             <div class="card-body" style="height: 250px;">
-                <h5 class="card-title"><a href="https://diagnijmegen.github.io/website-neuro">Neuroimage Analysis Group</a></h5>
-                <p class="card-text">Some introduction text that is placed on the home page.</p>
+                <h5 class="card-title"><a href="https://diagnijmegen.github.io/website-neuro">NeuroImaging</a></h5>
+                <p class="card-text"></p>
             </div>
             <div class="card-footer">
               <a href="https://diagnijmegen.github.io/website-neuro" class="btn btn-primary">Visit main website</a>
