--- a/members/index.html
+++ b/members/index.html
@@ -261,7 +261,7 @@ This page is generated automatically. Please do not change the content of this p
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <a href="https://beta.diagnijmegen.nl/members/rashindra-manniesing/"><img data-src="https://beta.diagnijmegen.nl/images/people/Rashindra_Manniesing_bw-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Rashindra Manniesing"></a>
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/rashindra-manniesing/">Rashindra Manniesing</a></h3>
-    <h4 class="person-title"><small>Assistant Professor</small></h4>
+    <h4 class="person-title"><small>Assistant Professor/Workgroup Leader</small></h4>
 </div>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <a href="https://beta.diagnijmegen.nl/members/jonas-teuwen/"><img data-src="https://beta.diagnijmegen.nl/images/people/Jonas_Teuwen-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Jonas Teuwen"></a>
