--- a/members/rashindra-manniesing/index.html
+++ b/members/rashindra-manniesing/index.html
@@ -252,7 +252,7 @@
             <div class="person">
                 <img class="rounded-circle" src="https://beta.diagnijmegen.nl/images/people/Rashindra_Manniesing_bw.jpg">
                 <h1>Rashindra Manniesing</h1>
-                <h2 class="text-muted">Assistant Professor</h2>
+                <h2 class="text-muted">Assistant Professor/Workgroup Leader</h2>
             </div>
 
             <div class="person-links mb-4">
