Pushing new version of website-diag

--- a/members/riccardo-samperna/index.html
+++ b/members/riccardo-samperna/index.html
@@ -12,24 +12,24 @@
 
 
     <!-- Search Engine -->
-    <meta name="description" content="Riccardo Samperna is a PhD candidate at the Diagnostic Image Analysis Group, Nijmegen . He received a bachelor degree in Computer Science from the University of Pisa, (Italy) in 2015 while...">
+    <meta name="description" content="Riccardo Samperna is a PhD candidate at the Diagnostic Image Analysis Group, Nijmegen. He received a bachelor degree in Computer Science from the University of Pisa, (Italy) in 2015 while spending...">
     <meta name="image" content="https://beta.diagnijmegen.nl/images/people/Riccardo_Samperna.jpg">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="Riccardo Samperna - Diagnostic Image Analysis Group">
-    <meta itemprop="description" content="Riccardo Samperna is a PhD candidate at the Diagnostic Image Analysis Group, Nijmegen . He received a bachelor degree in Computer Science from the University of Pisa, (Italy) in 2015 while...">
+    <meta itemprop="description" content="Riccardo Samperna is a PhD candidate at the Diagnostic Image Analysis Group, Nijmegen. He received a bachelor degree in Computer Science from the University of Pisa, (Italy) in 2015 while spending...">
     <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/people/Riccardo_Samperna.jpg">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Riccardo Samperna - Diagnostic Image Analysis Group">
-    <meta name="twitter:description" content="Riccardo Samperna is a PhD candidate at the Diagnostic Image Analysis Group, Nijmegen . He received a bachelor degree in Computer Science from the University of Pisa, (Italy) in 2015 while...">
+    <meta name="twitter:description" content="Riccardo Samperna is a PhD candidate at the Diagnostic Image Analysis Group, Nijmegen. He received a bachelor degree in Computer Science from the University of Pisa, (Italy) in 2015 while spending...">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/people/Riccardo_Samperna.jpg">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="Riccardo Samperna - Diagnostic Image Analysis Group">
-    <meta property="og:description" content="Riccardo Samperna is a PhD candidate at the Diagnostic Image Analysis Group, Nijmegen . He received a bachelor degree in Computer Science from the University of Pisa, (Italy) in 2015 while...">
+    <meta property="og:description" content="Riccardo Samperna is a PhD candidate at the Diagnostic Image Analysis Group, Nijmegen. He received a bachelor degree in Computer Science from the University of Pisa, (Italy) in 2015 while spending...">
     <meta property="og:image" content="https://beta.diagnijmegen.nl/images/people/Riccardo_Samperna.jpg">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
@@ -290,7 +290,7 @@
 
 
                 <dt>Bio:</dt>
-                <dd><p>Riccardo Samperna is a PhD candidate at the Diagnostic Image Analysis Group, Nijmegen . He received a bachelor degree in Computer Science from the University of Pisa, (Italy) in 2015 while spending a year at University College London, (United Kingdom) as an associate student. Subsequently he obtained a master degree in Artificial Intelligence from Radboud University Nijmegen. For his master thesis, he collaborated with the Intelligent Imaging group of TNO Den Haag working on Video Super Resolution with deep learning. He is currently working at the Department of Radiology and Nuclear Medicine of the RadboudUMC and he is involved in the project sMARt Borstkanker detectie met deep LEarning (MARBLE) supervised by Jonas Teuwen and Ritse Mann.</p></dd>
+                <dd><p>Riccardo Samperna is a PhD candidate at the Diagnostic Image Analysis Group, Nijmegen. He received a bachelor degree in Computer Science from the University of Pisa, (Italy) in 2015 while spending a year at University College London, (United Kingdom) as an associate student. Subsequently he obtained a master degree in Artificial Intelligence from Radboud University Nijmegen. For his master thesis, he collaborated with the Intelligent Imaging group of TNO Den Haag working on Video Super Resolution with deep learning. He is currently working at the Department of Radiology and Nuclear Medicine of the RadboudUMC and he is involved in the project sMARt Borstkanker detectie met deep LEarning (MARBLE) supervised by Jonas Teuwen and Ritse Mann.</p></dd>
 
 
 
