Pushing new version of website-diag

--- a/publications/bult19b/index.html
+++ b/publications/bult19b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="canonical" href="https://beta.diagnijmegen.nl/publications/ares19/">
+    <link rel="canonical" href="https://beta.diagnijmegen.nl/publications/bult19b/">
 
 
-    <title>iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network - Diagnostic Image Analysis Group</title>
+    <title>Automated Gleason Grading of Prostate Biopsies using Deep Learning - Diagnostic Image Analysis Group</title>
 
 
     <!-- Search Engine -->
@@ -16,19 +16,19 @@
     <meta name="image" content="">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network - Diagnostic Image Analysis Group">
+    <meta itemprop="name" content="Automated Gleason Grading of Prostate Biopsies using Deep Learning - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="">
     <meta itemprop="image" content="">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network - Diagnostic Image Analysis Group">
+    <meta name="twitter:title" content="Automated Gleason Grading of Prostate Biopsies using Deep Learning - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network - Diagnostic Image Analysis Group">
+    <meta property="og:title" content="Automated Gleason Grading of Prostate Biopsies using Deep Learning - Diagnostic Image Analysis Group">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
@@ -241,31 +241,24 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/">Home</a></li>
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/publications/">Publications</a></li>
-        <li class="breadcrumb-item">iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network</li>
+        <li class="breadcrumb-item">Automated Gleason Grading of Prostate Biopsies using Deep Learning</li>
       </ol>
     </nav>
 </div>
     <div class="container">
-    <h1 class="page-title">iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network</h1>
+    <h1 class="page-title">Automated Gleason Grading of Prostate Biopsies using Deep Learning</h1>
 
     <p class="lead">
-            G. Aresta,             C. Jacobs,             T. Araújo,             A. Cunha,             I. Ramos,             B. van Ginneken and A. Campilho    </p>
+            W. Bulten,             H. Pinckaers,             H. van Boven,             R. Vink,             T. de Bel,             B. van Ginneken,             J. van der Laak,             C. Hulsbergen-van de Kaa and G. Litjens    </p>
 
-    <p><i>Nature Scientific Reports</i> 2019;9(11591)</p>
+    <p><i>arXiv:1907.07980</i> 2019</p>
     <p>
-            <a href="https://doi.org/10.1038/s41598-019-48004-8" class="btn btn-primary">DOI</a>
-            <a href="http://www.ncbi.nlm.nih.gov/pubmed/31406194" class="btn btn-primary">PMID</a>
-            <a href="https://doi.org/10.1038/s41598-019-48004-8" class="btn btn-primary">URL</a>
+            <a href="['https://arxiv.org/abs/1907.07980', 'https://arxiv.org/abs/1907.07980']" class="btn btn-primary">arXiv</a>
     </p>
     <h2>Abstract</h2>
-    <p>We propose iW-Net, a deep learning model that allows for both automatic and interactive segmentation of lung nodules in computed tomography images. iW-Net is composed of two blocks: the first one provides an automatic segmentation and the second one allows to correct it by analyzing 2 points introduced by the user in the nodule’s boundary. For this purpose, a physics inspired weight map that takes the user input into account is proposed, which is used both as a feature map and in the system’s loss function. Our approach is extensively evaluated on the public LIDC-IDRI dataset, where we achieve a state-of-the-art performance of 0.55 intersection over union vs the 0.59 inter-observer agreement. Also, we show that iW-Net allows to correct the segmentation of small nodules, essential for proper patient referral decision, as well as improve the segmentation of the challenging non-solid nodules and thus may be an important tool for increasing the early diagnosis of lung cancer.</p>
+    <p>The Gleason score is the most important prognostic marker for prostate cancer patients but suffers from significant inter-observer variability. We developed a fully automated deep learning system to grade prostate biopsies. The system was developed using 5834 biopsies from 1243 patients. A semi-automatic labeling technique was used to circumvent the need for full manual annotation by pathologists. The developed system achieved a high agreement with the reference standard. In a separate observer experiment, the deep learning system outperformed 10 out of 15 pathologists. The system has the potential to improve prostate cancer prognostics by acting as a first or second reader.</p>
 
 
-    <h2>Request PDF</h2>
-
-    <p>A pdf file of this publication is available for personal use. Enter your e-mail address in the box below and press the button. You will receive an e-mail message with a link to the pdf file. Note: for this service you will be redirected to our PDF-service at <a href="www.radboudimaging.nl">radboudimaging.nl</a>.
-
-    <form method="post" action="http://shared.radboudimaging.nl/mediawiki/publication/confirmemail.php?bibkey=ares19&amp;ip=__USERIP__"><input type="text" name="email" size="50"><input type="submit" value="Send code by e-mail"></form>
     </div>
     </main>
 
@@ -274,7 +267,7 @@
         <div class="row">
             <div class="col-md-11 py-3 footer-content">
                 <p>
-                    <a href="https://github.com/diagnijmegen/website-content/edit/master/website-diag/content/pages/publications/ares19.md">&copy;</a>
+                    <a href="https://github.com/diagnijmegen/website-content/edit/master/website-diag/content/pages/publications/bult19b.md">&copy;</a>
 
                     Diagnostic Image Analysis Group 2017-2019. <a href="https://beta.diagnijmegen.nl/colofon">Colofon</a>.
                 </p>
