--- a/publications/index.html
+++ b/publications/index.html
@@ -1068,6 +1068,14 @@
         <!-- Getting list of pub_type -->
         <!-- Getting list of years -->
         <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
 
     <!-- Inpress keys should go here. To include "Accepted or to appear" section -->
 
@@ -1125,7 +1133,9 @@
 
                         <li>S. Vreemann, M.U. Dalmis, P. Bult, N. Karssemeijer, M.J.M. Broeders, A. Gubern-Mérida and R.M. Mann. "Amount of fibroglandular tissue FGT and background parenchymal enhancement BPE in relation to breast cancer risk and false positives in a breast MRI screening program : A retrospective cohort study", <i>European Radiology</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/vree19/">Abstract</a> <a href="https://doi.org/10.1007/s00330-019-06020-2">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/30796568/">PMID</a></li>
 
-                        <li>G. Aresta, C. Jacobs, T. Araújo, A. Cunha, I. Ramos, B. van Ginneken and A. Campilho. "iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network", <i>Nature Scientific Reports</i> 2019;9(11591). <a href="https://beta.diagnijmegen.nl/publications/ares19/">Abstract</a> <a href="https://doi.org/10.1038/s41598-019-48004-8">DOI</a> <a href="https://doi.org/10.1038/s41598-019-48004-8/">URL</a></li>
+                        <li>G. Aresta, C. Jacobs, T. Araújo, A. Cunha, I. Ramos, B. van Ginneken and A. Campilho. "iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network", <i>Nature Scientific Reports</i> 2019;9(11591). <a href="https://beta.diagnijmegen.nl/publications/ares19/">Abstract</a> <a href="https://doi.org/10.1038/s41598-019-48004-8">DOI</a> <a href="https://doi.org/10.1038/s41598-019-48004-8/">URL</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/31406194/">PMID</a></li>
+
+                        <li>G. Litjens, F. Ciompi, J.M. Wolterink, B.D. de Vos, T. Leiner, J. Teuwen and I. Išgum. "State-of-the-Art Deep Learning in Cardiovascular Image Analysis.", <i>JACC Cardiovascular Imaging</i> 2019;12:1549-1565. <a href="https://beta.diagnijmegen.nl/publications/litj19/">Abstract</a> <a href="https://doi.org/10.1016/j.jcmg.2019.06.009">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/31395244/">PMID</a></li>
 
                     </ul>
                                 <h3>Papers in conference proceedings</h3>
@@ -1155,6 +1165,8 @@
 
                         <li>A.L. Simpson, M. Antonelli, S. Bakas, M. Bilello, K. Farahani, B. van Ginneken, A. Kopp-Schneider, B.A. Landman, G. Litjens, B. Menze, O. Ronneberger, R.M. Summers, P. Bilic, P.F. Christ, R.K. G. Do, M. Gollub, J. Golia-Pernicka, S.H. Heckers, W.R. Jarnagin, M.K. McHugo, S. Napel, E. Vorontsov, L. Maier-Hein and M. Jorge Cardoso. "A large annotated medical image dataset for the development and evaluation of segmentation algorithms", <i>arXiv:1902.09063</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/simp19/">Abstract</a> <a href="https://arxiv.org/pdf/1902.09063.pdf/">arXiv</a> <a href="https://arxiv.org/abs/1902.09063/">arXiv</a></li>
 
+                        <li>W. Bulten, H. Pinckaers, H. van Boven, R. Vink, T. de Bel, B. van Ginneken, J. van der Laak, C. Hulsbergen-van de Kaa and G. Litjens. "Automated Gleason Grading of Prostate Biopsies using Deep Learning", <i>arXiv:1907.07980</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/bult19b/">Abstract</a> <a href="https://arxiv.org/abs/1907.07980/">arXiv</a> <a href="https://arxiv.org/abs/1907.07980/">arXiv</a></li>
+
                     </ul>
                                 <h3>Abstracts</h3>
                             <ul>
@@ -1175,6 +1187,11 @@
                         <li>D. Valkenburg, E. Runhart, B. Liefers, S. Lambertus, C.I. Sánchez, F.P. Cremers, B. Nathalie M and C.C.B. Hoyng. "Familial discordance in disease phenotype in siblings with Stargardt disease", in: <i>Association for Research in Vision and Ophthalmology</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/valk19/">Abstract</a></li>
 
                         <li>H. van Zeeland, J. Meakin, B. Liefers, C. González-Gonzalo, A. Vaidyanathan, B. van Ginneken, C.C.W. Klaver and C.I. Sánchez. "EyeNED workstation: Development of a multi-modal vendor-independent application for annotation, spatial alignment and analysis of retinal images", in: <i>Association for Research in Vision and Ophthalmology</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/zeel19/">Abstract</a></li>
+
+                    </ul>
+                                <h3>Theses</h3>
+                            <ul>
+                        <li>J. Winkens. "Out-of-distribution detection for computational pathology with multi-head ensembles" <i>Masters thesis</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/wink19/">Abstract</a></li>
 
                     </ul>
         <h2>2018</h2>
@@ -1519,7 +1536,7 @@
                             <ul>
                         <li>M. van Grinsven. "Automated analysis of retinal images for detection of age-related macular degeneration and diabetic retinopathy" <i>PhD thesis</i>, 2016. <a href="https://beta.diagnijmegen.nl/publications/grin16c/">Abstract</a> <a href="http://hdl.handle.net/2066/159478/">URL</a></li>
 
-                        <li>N. Moriakov. "Entropy and Kolmogorov complexity" <i>PhD thesis</i>, 2016. <a href="https://beta.diagnijmegen.nl/publications/mor16/">Abstract</a> <a href="https://doi.org/doi:10.4233/uuid:565eb3e7-e0ea-4a88-abbb-eb0ae2c6c36f">DOI</a> <a href="http://dx.doi.org/10.4233/uuid:565eb3e7-e0ea-4a88-abbb-eb0ae2c6c36f/">URL</a></li>
+                        <li>N. Moriakov. "Entropy and Kolmogorov complexity" <i>PhD thesis</i>, 2016. <a href="https://beta.diagnijmegen.nl/publications/mori16/">Abstract</a> <a href="https://doi.org/doi:10.4233/uuid:565eb3e7-e0ea-4a88-abbb-eb0ae2c6c36f">DOI</a> <a href="http://dx.doi.org/10.4233/uuid:565eb3e7-e0ea-4a88-abbb-eb0ae2c6c36f/">URL</a></li>
 
                         <li>J. Teuwen. "Shedding new light on gaussian harmonic analysis" <i>PhD thesis</i>, 2016. <a href="https://beta.diagnijmegen.nl/publications/teuw16/">Abstract</a> <a href="https://doi.org/10.4233/uuid:bcfb2d09-5828-4ad8-bfe6-e6cfe3b83c3f">DOI</a> <a href="http://dx.doi.org/10.4233/uuid:bcfb2d09-5828-4ad8-bfe6-e6cfe3b83c3f/">URL</a></li>
 
@@ -1973,6 +1990,11 @@
                         <li>D. Vukadinovic, T. van Walsum, R. Manniesing, S. Rozie, T.T. de Weert, A. van der Lugt and W.J. Niessen. "Automated Segmentation of Atherosclerotic Plaque in MDCT Angiogaphy of the Carotid Artery", in: <i>2nd Dutch Conference on Biomedical Engineering</i>, 2009. <a href="https://beta.diagnijmegen.nl/publications/vuka09a/">Abstract</a></li>
 
                     </ul>
+                                <h3>Theses</h3>
+                            <ul>
+                        <li>G. Litjens. "Pharmacokinetic modeling in breast cancer MRI" <i>Masters thesis</i>, 2009. <a href="https://beta.diagnijmegen.nl/publications/litj10b/">Abstract</a></li>
+
+                    </ul>
                                 <h3>Other publications</h3>
                             <ul>
                         <li>R. Manniesing. "Read and Write Support for MevisLab Dicom/Tiff Format", <i></i> 2009. <a href="https://beta.diagnijmegen.nl/publications/mann09a/">Abstract</a> <a href="http://www.insight-journal.org/browse/publication/311/">URL</a></li>
@@ -2046,7 +2068,7 @@
                     </ul>
                                 <h3>Theses</h3>
                             <ul>
-                        <li>R. Manniesing. "Image Analysis in CT Angiography" <i>PhD thesis</i>, 2006. <a href="https://beta.diagnijmegen.nl/publications/mann06e/">Abstract</a> <a href="http://dspace.library.uu.nl/handle/1874/13384/">URL</a></li>
+                        <li>R. Manniesing. "Image Analysis in CT Angiography" <i>PhD thesis</i>, 2006. <a href="https://beta.diagnijmegen.nl/publications/mann06e/">Abstract</a></li>
 
                     </ul>
         <h2>2005</h2>
