--- a/publications/nikita-moriakov/index.html
+++ b/publications/nikita-moriakov/index.html
@@ -276,7 +276,7 @@
                             <h2>2016</h2>
                                 <h3>Theses</h3>
                             <ul>
-                        <li>N. Moriakov. "Entropy and Kolmogorov complexity" <i>PhD thesis</i>, 2016. <a href="https://beta.diagnijmegen.nl/publications/mor16/">Abstract</a> <a href="https://doi.org/doi:10.4233/uuid:565eb3e7-e0ea-4a88-abbb-eb0ae2c6c36f">DOI</a> <a href="http://dx.doi.org/10.4233/uuid:565eb3e7-e0ea-4a88-abbb-eb0ae2c6c36f/">URL</a></li>
+                        <li>N. Moriakov. "Entropy and Kolmogorov complexity" <i>PhD thesis</i>, 2016. <a href="https://beta.diagnijmegen.nl/publications/mori16/">Abstract</a> <a href="https://doi.org/doi:10.4233/uuid:565eb3e7-e0ea-4a88-abbb-eb0ae2c6c36f">DOI</a> <a href="http://dx.doi.org/10.4233/uuid:565eb3e7-e0ea-4a88-abbb-eb0ae2c6c36f/">URL</a></li>
 
                     </ul>
 
