--- a/publications/teuw16/index.html
+++ b/publications/teuw16/index.html
@@ -255,6 +255,7 @@
         <p><b>Promotor: J. M. A. M van Neerven and P. Urbach</b></p>
         <p><b>Delft University of Technology</b></p>
         <p><b>
+                March 29,
                 2016
         </b></p>
 
