--- a/publications/jonas-teuwen/index.html
+++ b/publications/jonas-teuwen/index.html
@@ -262,6 +262,8 @@
 
                         <li>A. Rodriguez-Ruiz, K. Lång, A. Gubern-Merida, J. Teuwen, M. Broeders, G. Gennaro, P. Clauser, T.H. Helbich, M. Chevalier, T. Mertelmeier, M.G. Wallis, I. Andersson, S. Zackrisson, I. Sechopoulos and R.M. Mann. "Can we reduce the workload of mammographic screening by automatic identification of normal exams with artificial intelligence? A feasibility study", <i>European Radiology</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/rodr19/">Abstract</a> <a href="https://doi.org/10.1007/s00330-019-06186-9">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/30993432/">PMID</a></li>
 
+                        <li>G. Litjens, F. Ciompi, J.M. Wolterink, B.D. de Vos, T. Leiner, J. Teuwen and I. Išgum. "State-of-the-Art Deep Learning in Cardiovascular Image Analysis.", <i>JACC Cardiovascular Imaging</i> 2019;12:1549-1565. <a href="https://beta.diagnijmegen.nl/publications/litj19/">Abstract</a> <a href="https://doi.org/10.1016/j.jcmg.2019.06.009">DOI</a> <a href="http://www.ncbi.nlm.nih.gov/pubmed/31395244/">PMID</a></li>
+
                     </ul>
                                 <h3>Papers in conference proceedings</h3>
                             <ul>
