--- a/publications/litj10b/index.html
+++ b/publications/litj10b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="canonical" href="https://beta.diagnijmegen.nl/publications/ares19/">
+    <link rel="canonical" href="https://beta.diagnijmegen.nl/publications/litj10b/">
 
 
-    <title>iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network - Diagnostic Image Analysis Group</title>
+    <title>Pharmacokinetic modeling in breast cancer MRI - Diagnostic Image Analysis Group</title>
 
 
     <!-- Search Engine -->
@@ -16,19 +16,19 @@
     <meta name="image" content="">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network - Diagnostic Image Analysis Group">
+    <meta itemprop="name" content="Pharmacokinetic modeling in breast cancer MRI - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="">
     <meta itemprop="image" content="">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network - Diagnostic Image Analysis Group">
+    <meta name="twitter:title" content="Pharmacokinetic modeling in breast cancer MRI - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network - Diagnostic Image Analysis Group">
+    <meta property="og:title" content="Pharmacokinetic modeling in breast cancer MRI - Diagnostic Image Analysis Group">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
@@ -241,31 +241,28 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/">Home</a></li>
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/publications/">Publications</a></li>
-        <li class="breadcrumb-item">iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network</li>
+        <li class="breadcrumb-item">Pharmacokinetic modeling in breast cancer MRI</li>
       </ol>
     </nav>
 </div>
     <div class="container">
-    <h1 class="page-title">iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network</h1>
+    <h1 class="page-title">Pharmacokinetic modeling in breast cancer MRI</h1>
 
     <p class="lead">
-            G. Aresta,             C. Jacobs,             T. Araújo,             A. Cunha,             I. Ramos,             B. van Ginneken and A. Campilho    </p>
+            G. Litjens    </p>
 
-    <p><i>Nature Scientific Reports</i> 2019;9(11591)</p>
+    <p></p>
     <p>
-            <a href="https://doi.org/10.1038/s41598-019-48004-8" class="btn btn-primary">DOI</a>
-            <a href="http://www.ncbi.nlm.nih.gov/pubmed/31406194" class="btn btn-primary">PMID</a>
-            <a href="https://doi.org/10.1038/s41598-019-48004-8" class="btn btn-primary">URL</a>
     </p>
     <h2>Abstract</h2>
-    <p>We propose iW-Net, a deep learning model that allows for both automatic and interactive segmentation of lung nodules in computed tomography images. iW-Net is composed of two blocks: the first one provides an automatic segmentation and the second one allows to correct it by analyzing 2 points introduced by the user in the nodule’s boundary. For this purpose, a physics inspired weight map that takes the user input into account is proposed, which is used both as a feature map and in the system’s loss function. Our approach is extensively evaluated on the public LIDC-IDRI dataset, where we achieve a state-of-the-art performance of 0.55 intersection over union vs the 0.59 inter-observer agreement. Also, we show that iW-Net allows to correct the segmentation of small nodules, essential for proper patient referral decision, as well as improve the segmentation of the challenging non-solid nodules and thus may be an important tool for increasing the early diagnosis of lung cancer.</p>
+    <p>Breast cancer is a disease which impacts the lives of thousands of people. In the entire world over half a million people die due to breast cancer every year, mostly women. However, when breast cancer is detected in the early stages of disease ﬁve-year-survival rate approaches 100%. So, it is very important to detect breast cancer as early as possible. That is why in most of modern Western society screening programs for breast cancer have been developed. Most of these screening programs focus on x-ray mammography. However, women who have an increased risk to get breast cancer these screening programs are not adequate. These women usually develop breast cancer at a younger age and x-ray mammography for those women has a low sensitivity. For these cases, and inconclusive ﬁndings in x-ray mammography in other women, dynamic contrast enhance (DCE) MRI is used. In DCE MRI a contrast agent is used which takes advantage of the fact that tumor vasculature is leaky and sloppy, thus the contrast agent tends to accumulate in the tumor, leading to increased signal intensity in T1-weighted images. Due to the fact that we have a time range of images it is possible to look at kinetic behavior. However, as kinetic curves have a large inter and intra patient variability and variability depending on the imaging site the analysis of these curves is not straightforward. Pharmacokinetic modeling could be an answer to those problems as it can be used to obtain lesion-speciﬁc physiological parameters. To use pharmacokinetic modeling however we need high temporal resolution data, which is not readily available. The University of Chicago Medical Center obtained several high temporal resolution data sets for the initial part of the kinetic enhancement curve in addition to the regular low temporal clinical scans. These data sets were the basis for this research. When analyzing such data several factors play an important role. The ﬁrst of these being the extraction of the signal-vs.-time curves from the data sets. In this report we used a small graphical user interface to extract the data. The low and high temporal resolution images were obtained in diﬀerent orientations, which was a problem we also needed to solve. The second step after extraction of the signal-vs.-time-curves was the conversion of the signal intensity to contrast agent concentration. In literature there were several methods that were used to accomplish this, but all were based on the use of a gradient recalled echo signal model. We ﬁrst investigated the assumption that we can neglect T2∗ eﬀects, which we concluded was allowed. To estimate concentration the tissue T1 at time 0 has to been known. As we had no additional T1 measurements, we used a reference tissue approach to estimate T1. We investigated if the simpliﬁcations often used in this method were allowed and we concluded that it was better to use the full model. The last part of the conversion to concentration is the estimation of uncertainty in the concentration curves, which in itself contains several uncertainties. We derived an algebraic expression for these uncertainties using a Taylor expansion of concentration uncertainty. On average the uncertainty levels are around 10% of the concentration. The third step was choosing a pharmacokinetic model, we inspected a total of four models, the standard and extended Tofts models, the shutter speed model and the Brix model. We ﬁrst assessed the ability of each model to ﬁnd correct minima using a forward-backward simulation approach. We then simulated data that has the same temporal and uncertainty characteristics as real clinical data and used the same forward-backward approach to estimate model performance. We concluded that for data with those speciﬁc characteristics only the standard Tofts model performed adequately. After that we started investigating the data requirements for all models and we could see that for all models except the standard Tofts model data requirements on especially temporal resolution are high. Lastly we did an investigation in the errors introduced by assuming that the underlying physiological processes are more simplistic, which is what we do when we use the standard Tofts model. The fourth step was ﬁnding the arterial input function, which is used as an input for the pharmacokinetic model. In literature there are several methods, we discussed three: the use of a standardized input function (population averaged or mathematical), the use of a single reference tissue approach and the use of a multiple refernce tissue approach. We found that errors caused by using a population averaged input function can be quite large as deviations from the true local input functions are seen directly in the pharmacokinetic parameters. The single reference tissue approach is another way to estimate the input function. We found that when we know the exact pharmacokinetic parameters of the reference tissue the errors are considerably lower than in the use of a standardized AIF. When pharmacokinetic parameters of the reference tissue are wrong however we can still induce large errors in parameter estimates. The third option was the use of a multiple reference tissue approach, which gave the best results. If multiple reference tissue are available within the data set this option should be used. The last step is to put together the pieces from the previous steps and use that to analyze the clinical data. We were able to use 14 patient data sets. Although a small number, we were able to see that there seems to be a relation between malignancy and Ktrans values. Benign tissues seemed to have lower Ktrans values when compared to malignant tissues. Another question was if we were able to cluster diﬀerent cancer types according to pharmacokinetic parameters, but we have too little data to support that claim.</p>
 
 
     <h2>Request PDF</h2>
 
     <p>A pdf file of this publication is available for personal use. Enter your e-mail address in the box below and press the button. You will receive an e-mail message with a link to the pdf file. Note: for this service you will be redirected to our PDF-service at <a href="www.radboudimaging.nl">radboudimaging.nl</a>.
 
-    <form method="post" action="http://shared.radboudimaging.nl/mediawiki/publication/confirmemail.php?bibkey=ares19&amp;ip=__USERIP__"><input type="text" name="email" size="50"><input type="submit" value="Send code by e-mail"></form>
+    <form method="post" action="http://shared.radboudimaging.nl/mediawiki/publication/confirmemail.php?bibkey=litj10b&amp;ip=__USERIP__"><input type="text" name="email" size="50"><input type="submit" value="Send code by e-mail"></form>
     </div>
     </main>
 
@@ -274,7 +271,7 @@
         <div class="row">
             <div class="col-md-11 py-3 footer-content">
                 <p>
-                    <a href="https://github.com/diagnijmegen/website-content/edit/master/website-diag/content/pages/publications/ares19.md">&copy;</a>
+                    <a href="https://github.com/diagnijmegen/website-content/edit/master/website-diag/content/pages/publications/litj10b.md">&copy;</a>
 
                     Diagnostic Image Analysis Group 2017-2019. <a href="https://beta.diagnijmegen.nl/colofon">Colofon</a>.
                 </p>
