--- a/publications/litj15a/index.html
+++ b/publications/litj15a/index.html
@@ -254,7 +254,7 @@
     <img src="https://beta.diagnijmegen.nl/images/theses/Litj15a.png">
         <p><b>Promotor: N. Karssemeijer and J. O. Barentsz</b></p>
         <p><b>Copromotor: H. J. Huisman</b></p>
-        <p><b>Radboud Universiteit Nijmegen</b></p>
+        <p><b>Radboud University, Nijmegen</b></p>
         <p><b>
                 January 23,
                 2015
