--- a/publications/litj19/index.html
+++ b/publications/litj19/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="canonical" href="https://beta.diagnijmegen.nl/publications/ares19/">
+    <link rel="canonical" href="https://beta.diagnijmegen.nl/publications/litj19/">
 
 
-    <title>iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network - Diagnostic Image Analysis Group</title>
+    <title>State-of-the-Art Deep Learning in Cardiovascular Image Analysis. - Diagnostic Image Analysis Group</title>
 
 
     <!-- Search Engine -->
@@ -16,19 +16,19 @@
     <meta name="image" content="">
 
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network - Diagnostic Image Analysis Group">
+    <meta itemprop="name" content="State-of-the-Art Deep Learning in Cardiovascular Image Analysis. - Diagnostic Image Analysis Group">
     <meta itemprop="description" content="">
     <meta itemprop="image" content="">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network - Diagnostic Image Analysis Group">
+    <meta name="twitter:title" content="State-of-the-Art Deep Learning in Cardiovascular Image Analysis. - Diagnostic Image Analysis Group">
     <meta name="twitter:description" content="">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network - Diagnostic Image Analysis Group">
+    <meta property="og:title" content="State-of-the-Art Deep Learning in Cardiovascular Image Analysis. - Diagnostic Image Analysis Group">
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
@@ -241,31 +241,30 @@
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/">Home</a></li>
         <li class="breadcrumb-item"><a href="https://beta.diagnijmegen.nl/publications/">Publications</a></li>
-        <li class="breadcrumb-item">iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network</li>
+        <li class="breadcrumb-item">State-of-the-Art Deep Learning in Cardiovascular Image Analysis.</li>
       </ol>
     </nav>
 </div>
     <div class="container">
-    <h1 class="page-title">iW-Net: an automatic and minimalistic interactive lung nodule segmentation deep network</h1>
+    <h1 class="page-title">State-of-the-Art Deep Learning in Cardiovascular Image Analysis.</h1>
 
     <p class="lead">
-            G. Aresta,             C. Jacobs,             T. Araújo,             A. Cunha,             I. Ramos,             B. van Ginneken and A. Campilho    </p>
+            G. Litjens,             F. Ciompi,             J.M. Wolterink,             B.D. de Vos,             T. Leiner,             J. Teuwen and I. Išgum    </p>
 
-    <p><i>Nature Scientific Reports</i> 2019;9(11591)</p>
+    <p><i>JACC Cardiovascular Imaging</i> 2019;12:1549-1565</p>
     <p>
-            <a href="https://doi.org/10.1038/s41598-019-48004-8" class="btn btn-primary">DOI</a>
-            <a href="http://www.ncbi.nlm.nih.gov/pubmed/31406194" class="btn btn-primary">PMID</a>
-            <a href="https://doi.org/10.1038/s41598-019-48004-8" class="btn btn-primary">URL</a>
+            <a href="https://doi.org/10.1016/j.jcmg.2019.06.009" class="btn btn-primary">DOI</a>
+            <a href="http://www.ncbi.nlm.nih.gov/pubmed/31395244" class="btn btn-primary">PMID</a>
     </p>
     <h2>Abstract</h2>
-    <p>We propose iW-Net, a deep learning model that allows for both automatic and interactive segmentation of lung nodules in computed tomography images. iW-Net is composed of two blocks: the first one provides an automatic segmentation and the second one allows to correct it by analyzing 2 points introduced by the user in the nodule’s boundary. For this purpose, a physics inspired weight map that takes the user input into account is proposed, which is used both as a feature map and in the system’s loss function. Our approach is extensively evaluated on the public LIDC-IDRI dataset, where we achieve a state-of-the-art performance of 0.55 intersection over union vs the 0.59 inter-observer agreement. Also, we show that iW-Net allows to correct the segmentation of small nodules, essential for proper patient referral decision, as well as improve the segmentation of the challenging non-solid nodules and thus may be an important tool for increasing the early diagnosis of lung cancer.</p>
+    <p>Cardiovascular imaging is going to change substantially in the next decade, fueled by the deep learning revolution. For medical professionals, it is important to keep track of these developments to ensure that deep learning can have meaningful impact on clinical practice. This review aims to be a stepping stone in this process. The general concepts underlying most successful deep learning algorithms are explained, and an overview of the state-of-the-art deep learning in cardiovascular imaging is provided. This review discusses &gt;80 papers, covering modalities ranging from cardiac magnetic resonance, computed tomography, and single-photon emission computed tomography, to intravascular optical coherence tomography and echocardiography. Many different machines learning algorithms were used throughout these papers, with the most common being convolutional neural networks. Recent algorithms such as generative adversarial models were also used. The potential implications of deep learning algorithms on clinical practice, now and in the near future, are discussed.</p>
 
 
     <h2>Request PDF</h2>
 
     <p>A pdf file of this publication is available for personal use. Enter your e-mail address in the box below and press the button. You will receive an e-mail message with a link to the pdf file. Note: for this service you will be redirected to our PDF-service at <a href="www.radboudimaging.nl">radboudimaging.nl</a>.
 
-    <form method="post" action="http://shared.radboudimaging.nl/mediawiki/publication/confirmemail.php?bibkey=ares19&amp;ip=__USERIP__"><input type="text" name="email" size="50"><input type="submit" value="Send code by e-mail"></form>
+    <form method="post" action="http://shared.radboudimaging.nl/mediawiki/publication/confirmemail.php?bibkey=litj19&amp;ip=__USERIP__"><input type="text" name="email" size="50"><input type="submit" value="Send code by e-mail"></form>
     </div>
     </main>
 
@@ -274,7 +273,7 @@
         <div class="row">
             <div class="col-md-11 py-3 footer-content">
                 <p>
-                    <a href="https://github.com/diagnijmegen/website-content/edit/master/website-diag/content/pages/publications/ares19.md">&copy;</a>
+                    <a href="https://github.com/diagnijmegen/website-content/edit/master/website-diag/content/pages/publications/litj19.md">&copy;</a>
 
                     Diagnostic Image Analysis Group 2017-2019. <a href="https://beta.diagnijmegen.nl/colofon">Colofon</a>.
                 </p>
