--- a/publications/wouter-bulten/index.html
+++ b/publications/wouter-bulten/index.html
@@ -264,6 +264,11 @@
                         <li>H. Pinckaers, W. Bulten and G. Litjens. "High resolution whole prostate biopsy classification using streaming stochastic gradient descent", in: <i>Medical Imaging</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/pinc19/">Abstract</a> <a href="https://doi.org/10.1117/12.2512817">DOI</a></li>
 
                     </ul>
+                                <h3>Preprints</h3>
+                            <ul>
+                        <li>W. Bulten, H. Pinckaers, H. van Boven, R. Vink, T. de Bel, B. van Ginneken, J. van der Laak, C. Hulsbergen-van de Kaa and G. Litjens. "Automated Gleason Grading of Prostate Biopsies using Deep Learning", <i>arXiv:1907.07980</i> 2019. <a href="https://beta.diagnijmegen.nl/publications/bult19b/">Abstract</a> <a href="https://arxiv.org/abs/1907.07980/">arXiv</a> <a href="https://arxiv.org/abs/1907.07980/">arXiv</a></li>
+
+                    </ul>
                                 <h3>Abstracts</h3>
                             <ul>
                         <li>W. Bulten, H. Pinckaers, C. Hulsbergen-van de Kaa and G. Litjens. "Automated Gleason Grading of Prostate Biopsies Using Deep Learning", in: <i>United States and Canadian Academy of Pathology (USCAP) 108th Annual Meeting</i>, 2019. <a href="https://beta.diagnijmegen.nl/publications/bult19a/">Abstract</a></li>
