--- a/thesis-gallery/index.html
+++ b/thesis-gallery/index.html
@@ -1068,6 +1068,14 @@
         <!-- Getting list of pub_type -->
         <!-- Getting list of years -->
         <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
     <!-- Inpress keys should go here. To include "Accepted or to appear" section -->
     <p>Below is an overview of PhD theses written or supervised by members of the Diagnostic Image Analysis Group.</p>
     <!-- Lists the publications per year and organized by publication type -->
@@ -1103,13 +1111,13 @@
 
                     <div class="col-md-4">
                         <div class="card">
-                            <a href="https://beta.diagnijmegen.nl/publications/mor16"><img class="card-img-top" src="https://beta.diagnijmegen.nl/images/theses/Mor16.png" alt="Entropy and Kolmogorov complexity"></a>
+                            <a href="https://beta.diagnijmegen.nl/publications/mori16"><img class="card-img-top" src="https://beta.diagnijmegen.nl/images/theses/Mori16.png" alt="Entropy and Kolmogorov complexity"></a>
                             <div class="card-body" style="height: 170px">
-                                <h5 class="card-title"><a href="https://beta.diagnijmegen.nl/publications/mor16">Entropy and Kolmogorov complexity</a></h5>
+                                <h5 class="card-title"><a href="https://beta.diagnijmegen.nl/publications/mori16">Entropy and Kolmogorov complexity</a></h5>
                                 <p class="text-muted">Moriakov, N.</p>
                             </div>
                             <div class="card-footer" style="background: none">
-                                <a href="https://beta.diagnijmegen.nl/publications/mor16" class="btn btn-primary">Read more</a>
+                                <a href="https://beta.diagnijmegen.nl/publications/mori16" class="btn btn-primary">Read more</a>
                             </div>
                         </div>
                     </div>
