Pushing new version of website-diag

--- a/index.html
+++ b/index.html
@@ -348,6 +348,23 @@
 
           <div class="col-md-8">
               <span class="vacancy-label">Student project</span>
+            <h3><a href="https://beta.diagnijmegen.nl/vacancies/aimaster-interventional-mri/" rel="bookmark" title="Permalink to AI steered interventional MRI">
+              AI steered interventional MRI
+            </a></h3>
+
+            <p>AI driven real-time MRI</p>
+
+            <p><a href="https://beta.diagnijmegen.nl/vacancies/aimaster-interventional-mri/" class="btn btn-primary">More information</a></p>
+          </div>
+        </div>
+
+        <div class="row vacancy">
+          <div class="col-md-4">
+            <img class="img-thumbnail" src="https://beta.diagnijmegen.nl/images/vacancies/TNBC-student-480.png">
+          </div>
+
+          <div class="col-md-8">
+              <span class="vacancy-label">Student project</span>
             <h3><a href="https://beta.diagnijmegen.nl/vacancies/dl-prediction-recurrence-tnbc/" rel="bookmark" title="Permalink to Deep Learning to predict recurrence in triple negative breast cancer (TNBC)">
               Deep Learning to predict recurrence in triple negative breast cancer (TNBC)
             </a></h3>
@@ -375,28 +392,12 @@
           </div>
         </div>
 
-        <div class="row vacancy">
-          <div class="col-md-4">
-            <img class="img-thumbnail" src="https://beta.diagnijmegen.nl/images/vacancies/master_student_stic-480.jpg">
-          </div>
-
-          <div class="col-md-8">
-              <span class="vacancy-label">Student project</span>
-            <h3><a href="https://beta.diagnijmegen.nl/vacancies/deep-learning-for-the-differentiation-of-stic-lesions/" rel="bookmark" title="Permalink to Deep Learning for the differentiation of STIC lesions">
-              Deep Learning for the differentiation of STIC lesions
-            </a></h3>
-
-            <p>The goal is to develop a deep learning algorithm for the differentiation of STIC lesions from normal fallopian tube epithelium. The digital pathology images of a cohort of both STIC lesions and normal tubal epithelium from BRCA1/2 carries will be available. The output will be an algorithm that can  identify aberrant tubal epithelium with a high sensitivity.</p>
-
-            <p><a href="https://beta.diagnijmegen.nl/vacancies/deep-learning-for-the-differentiation-of-stic-lesions/" class="btn btn-primary">More information</a></p>
-          </div>
-        </div>
 
 
 
 
         <div class="row">
-          <div class="col-md-12 mb-4"><a href="https://beta.diagnijmegen.nl/vacancies" class="btn btn-primary">All vacancies (6)</a></div>
+          <div class="col-md-12 mb-4"><a href="https://beta.diagnijmegen.nl/vacancies" class="btn btn-primary">All vacancies (7)</a></div>
         </div>
       </div>
     </div>
