--- a/vacancies/aimaster-interventional-mri/index.html
+++ b/vacancies/aimaster-interventional-mri/index.html
@@ -12,24 +12,24 @@
 
 
     <!-- Search Engine -->
-    <meta name="description" content="AI driven real-time MRI">
+    <meta name="description" content="The goal of this project is to develop Artificial Intelligence (AI) to track tumor targets and automatically steer MRI acquisitions to optimally visualize these targets in real-time MRI conditions.">
     <meta name="image" content="https://beta.diagnijmegen.nl/images/vacancies/TNBC-student.png">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="AI steered interventional MRI - Diagnostic Image Analysis Group">
-    <meta itemprop="description" content="AI driven real-time MRI">
+    <meta itemprop="description" content="The goal of this project is to develop Artificial Intelligence (AI) to track tumor targets and automatically steer MRI acquisitions to optimally visualize these targets in real-time MRI conditions.">
     <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/vacancies/TNBC-student.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="AI steered interventional MRI - Diagnostic Image Analysis Group">
-    <meta name="twitter:description" content="AI driven real-time MRI">
+    <meta name="twitter:description" content="The goal of this project is to develop Artificial Intelligence (AI) to track tumor targets and automatically steer MRI acquisitions to optimally visualize these targets in real-time MRI conditions.">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/vacancies/TNBC-student.png">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="AI steered interventional MRI - Diagnostic Image Analysis Group">
-    <meta property="og:description" content="AI driven real-time MRI">
+    <meta property="og:description" content="The goal of this project is to develop Artificial Intelligence (AI) to track tumor targets and automatically steer MRI acquisitions to optimally visualize these targets in real-time MRI conditions.">
     <meta property="og:image" content="https://beta.diagnijmegen.nl/images/vacancies/TNBC-student.png">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
