Pushing new version of website-diag

--- a/vacancies/aimaster-interventional-mri/index.html
+++ b/vacancies/aimaster-interventional-mri/index.html
@@ -282,7 +282,7 @@
 <p>Location: Radboud University Nijmegen Medical Centre</p>
 </li>
 <li>
-<p>For more information please contact [Patrick Brand]</p>
+<p>For more information please contact <a href="http://diagnijmegen.nl/index.php/Person?name=Patrick_Brand">Patrick Brand</a></p>
 </li>
 </ul>
     </div>
