--- a/vacancies/aimaster-interventional-mri/index.html
+++ b/vacancies/aimaster-interventional-mri/index.html
@@ -295,6 +295,11 @@
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <img src="https://beta.diagnijmegen.nl/images/people/Person.png" class="img-thumbnail lazyload rounded-circle" alt="Henkjan Huisman">
     <h3 class="person-name">Henkjan Huisman</h3>
+</div>
+
+<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+    <img src="https://beta.diagnijmegen.nl/images/people/Person.png" class="img-thumbnail lazyload rounded-circle" alt=" Patrick Brand">
+    <h3 class="person-name"> Patrick Brand</h3>
 </div>        </div>
     </div>
     </main>
