Pushing new version of website-diag

--- a/vacancies/aimaster-interventional-mri/index.html
+++ b/vacancies/aimaster-interventional-mri/index.html
@@ -293,11 +293,12 @@
     <div class="container">
         <div class="row people-grid">
 
-
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
-    <img src="https://beta.diagnijmegen.nl/images/people/Person.png" class="img-thumbnail lazyload rounded-circle" alt="Henkjan Huisman">
-    <h3 class="person-name">Henkjan Huisman</h3>
+    <a href="https://beta.diagnijmegen.nl/members/henkjan-huisman/"><img data-src="https://beta.diagnijmegen.nl/images/people/Henkjan_Huisman.jpg" class="img-thumbnail rounded-circle lazyload" alt="Henkjan Huisman"></a>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/henkjan-huisman/">Henkjan Huisman</a></h3>
+    <h4 class="person-title"><small>Associate professor</small></h4>
 </div>
+
 
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <img src="https://beta.diagnijmegen.nl/images/people/Person.png" class="img-thumbnail lazyload rounded-circle" alt=" Patrick Brand">
