--- a/members/index.html
+++ b/members/index.html
@@ -279,6 +279,11 @@ This page is generated automatically. Please do not change the content of this p
     <h4 class="person-title"><small>Lead Research Software Engineer</small></h4>
 </div>
 <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
+    <a href="https://beta.diagnijmegen.nl/members/henkjan-huisman/"><img data-src="https://beta.diagnijmegen.nl/images/people/Henkjan_Huisman.jpg" class="img-thumbnail rounded-circle lazyload" alt="Henkjan Huisman"></a>
+    <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/henkjan-huisman/">Henkjan Huisman</a></h3>
+    <h4 class="person-title"><small>Associate professor</small></h4>
+</div>
+<div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-6 person">
     <a href="https://beta.diagnijmegen.nl/members/geert-litjens/"><img data-src="https://beta.diagnijmegen.nl/images/people/Geert_Litjens-160.jpg" class="img-thumbnail rounded-circle lazyload" alt="Geert Litjens"></a>
     <h3 class="person-name"><a href="https://beta.diagnijmegen.nl/members/geert-litjens/">Geert Litjens</a></h3>
     <h4 class="person-title"><small>Assistant professor</small></h4>
