--- a/thesis-gallery/index.html
+++ b/thesis-gallery/index.html
@@ -1076,6 +1076,104 @@
         <!-- Getting list of pub_type -->
         <!-- Getting list of years -->
         <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
+        <!-- Getting list of years -->
+        <!-- Getting list of pub_type -->
     <!-- Inpress keys should go here. To include "Accepted or to appear" section -->
     <p>Below is an overview of PhD theses written or supervised by members of the Diagnostic Image Analysis Group.</p>
     <!-- Lists the publications per year and organized by publication type -->
@@ -1213,6 +1311,20 @@
                             </div>
                             <div class="card-footer" style="background: none">
                                 <a href="https://beta.diagnijmegen.nl/publications/mann06e" class="btn btn-primary">Read more</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-4">
+                        <div class="card">
+                            <a href="https://beta.diagnijmegen.nl/publications/huis98c"><img class="card-img-top" src="https://beta.diagnijmegen.nl/images/theses/Huis98c.png" alt="In vivo ultrasonic tissue characterization of liver metastases"></a>
+                            <div class="card-body" style="height: 170px">
+                                <h5 class="card-title"><a href="https://beta.diagnijmegen.nl/publications/huis98c">In vivo ultrasonic tissue characterization of liver metastases</a></h5>
+                                <p class="text-muted">H. Huisman</p>
+                            </div>
+                            <div class="card-footer" style="background: none">
+                                <a href="https://beta.diagnijmegen.nl/publications/huis98c" class="btn btn-primary">Read more</a>
                             </div>
                         </div>
                     </div>
