Pushing new version of website-diag

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
               AI steered interventional MRI
             </a></h3>
 
-            <p>The goal of this project is to develop Artificial Intelligence (AI) to track tumor targets and automatically steer MRI acquisitions to optimally visualize these targets in real-time MRI conditions.</p>
+            <p>Develop Artificial Intelligence (AI) to track tumor targets in interventional MRI.</p>
 
             <p><a href="https://beta.diagnijmegen.nl/vacancies/aimaster-interventional-mri/" class="btn btn-primary">More information</a></p>
           </div>
