--- a/vacancies/aimaster-interventional-mri/index.html
+++ b/vacancies/aimaster-interventional-mri/index.html
@@ -12,24 +12,24 @@
 
 
     <!-- Search Engine -->
-    <meta name="description" content="The goal of this project is to develop Artificial Intelligence (AI) to track tumor targets and automatically steer MRI acquisitions to optimally visualize these targets in real-time MRI conditions.">
+    <meta name="description" content="Develop Artificial Intelligence (AI) to track tumor targets in interventional MRI.">
     <meta name="image" content="https://beta.diagnijmegen.nl/images/vacancies/mr_guided_surgery.png">
 
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="AI steered interventional MRI - Diagnostic Image Analysis Group">
-    <meta itemprop="description" content="The goal of this project is to develop Artificial Intelligence (AI) to track tumor targets and automatically steer MRI acquisitions to optimally visualize these targets in real-time MRI conditions.">
+    <meta itemprop="description" content="Develop Artificial Intelligence (AI) to track tumor targets in interventional MRI.">
     <meta itemprop="image" content="https://beta.diagnijmegen.nl/images/vacancies/mr_guided_surgery.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="AI steered interventional MRI - Diagnostic Image Analysis Group">
-    <meta name="twitter:description" content="The goal of this project is to develop Artificial Intelligence (AI) to track tumor targets and automatically steer MRI acquisitions to optimally visualize these targets in real-time MRI conditions.">
+    <meta name="twitter:description" content="Develop Artificial Intelligence (AI) to track tumor targets in interventional MRI.">
     <meta name="twitter:creator" content="@diagnijmegen">
     <meta name="twitter:image:src" content="https://beta.diagnijmegen.nl/images/vacancies/mr_guided_surgery.png">
 
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="AI steered interventional MRI - Diagnostic Image Analysis Group">
-    <meta property="og:description" content="The goal of this project is to develop Artificial Intelligence (AI) to track tumor targets and automatically steer MRI acquisitions to optimally visualize these targets in real-time MRI conditions.">
+    <meta property="og:description" content="Develop Artificial Intelligence (AI) to track tumor targets in interventional MRI.">
     <meta property="og:image" content="https://beta.diagnijmegen.nl/images/vacancies/mr_guided_surgery.png">
     <meta property="og:site_name" content="Diagnostic Image Analysis Group">
     <meta property="og:type" content="website">
@@ -257,14 +257,14 @@
 
     <div class="page-content">
         <h2>Background</h2>
-<p>MRI allows minimally invasive treatment of cancer and other diseases. MRI accurately reveals a tumor within an organ or at difficult to  reach locations. Using real-time MRI special needles are inserted such that the tip is within the tumor. Several types of treatment exist. One such treatment is to heat the tumor tip. Tissue surrounding the tip is exposed to the treatment and tissue cells in that region are killed and subsequently broken down by the body. The size of the region depends on the duration of the treatment. This type of treatment has several advantages. MRI guided interventions prevents having to surgically search for the tumor reducing disruption to anatomical structures. The real-time feedback on the effect of the intervention ensures good coverage of the tumor region. The minimally invasive procedure allows faster recovery of the patient.</p>
-<p>The accuracy of interventional MRI is unfortunately limited because during needle intervention the body deforms and structures disappear from the imaging display. The MRI needs to be manually adjusted to acquire images in a new imaging plane that shows the structure in relation to the needle. This repeated MRI adjustment takes considerable time and leads to supoptimal needle placement.</p>
-<p>The goal of this project is to develop Artificial Intelligence (AI) improve MRI guided interventions by automatically tracking tumors and automatically steer MRI acquisitions to optimally visualize these. We have an MRI scanner that can be digitally steered to acquire a specific image plane. AI can be developed such that it can track an object. The AI output can be used to steer the MRI. With the improved visualization interventions can be become more accurate in less time.</p>
+<p>MRI allows minimally invasive treatment of cancer and other diseases. MRI accurately reveals a tumor within an organ or at difficult to reach locations. Using real-time MRI visualization, special needles are inserted such that the tip is within the tumor. Several types of treatment exist. One such treatment is to heat the tumor tip. The tissue surrounding the tip is exposed to the treatment and tissue cells in that region are killed and subsequently broken down by the body. The size of the region depends on the duration of the treatment. This type of therapy has several advantages. MRI guided interventions prevent having to search for the tumor reducing disruption to anatomical structures surgically. The real-time feedback on the effect of the intervention ensures excellent coverage of the tumor region. The minimally invasive procedure allows faster recovery of the patient.</p>
+<p>The accuracy of interventional MRI is unfortunately limited because during needle intervention, the body deforms and structures disappear from the imaging display. The MRI needs to be manually adjusted to acquire images in a new imaging plane that shows the structure in relation to the needle. This repeated MRI adjustment takes considerable time and leads to suboptimal needle placement.</p>
+<p>The goal of this project is to develop Artificial Intelligence (AI) to improve MRI guided interventions by automatically tracking tumors and automatically steering MRI acquisitions. We have an MRI scanner that can be digitally steered. AI can be developed such that it can track an object from a series of MRI images. The developed AI output can be used to steer the MRI. With the improved visualization, interventions can become more accurate in less time.</p>
 <h2>Tasks</h2>
-<p>In this pilot project the focus is on simulated interventional MRI.
-- Develop an MRI simulation module. The synthetic MRI images shows moving targets with adjustable motion to simulate varying levels of difficulty.
-- Develop an AI tracking module that predicts the target location from a series of MRI images.
-- Develop a demonstrator that compares conventional versus AI driven interventional MRI </p>
+<p>In this pilot project, the focus is on simulated interventional MRI. The tasks are as follows:
+- Develop an MRI simulation module. Synthetic MRI image series should show moving tumor targets with an adjustable motion to simulate varying levels of difficulty.
+- Develop an AI tracking module that predicts the tumor target location from a series of MRI images.
+- Develop a demonstrator that compares conventional versus AI-driven interventional MRI </p>
 <h2>Requirements</h2>
 <ul>
 <li>
@@ -283,7 +283,7 @@
 <p>Location: Radboud University Nijmegen Medical Centre</p>
 </li>
 <li>
-<p>For more information please contact <a href="http://diagnijmegen.nl/index.php/Person?name=Patrick_Brand">Patrick Brand</a></p>
+<p>For more information, please contact <a href="http://diagnijmegen.nl/index.php/Person?name=Patrick_Brand">Patrick Brand</a></p>
 </li>
 </ul>
     </div>
