Pushing new version of website-diag

--- a/vacancies/aimaster-interventional-mri/index.html
+++ b/vacancies/aimaster-interventional-mri/index.html
@@ -261,10 +261,12 @@
 <p>The accuracy of interventional MRI is unfortunately limited because during needle intervention, the body deforms and structures disappear from the imaging display. The MRI needs to be manually adjusted to acquire images in a new imaging plane that shows the structure in relation to the needle. This repeated MRI adjustment takes considerable time and leads to suboptimal needle placement.</p>
 <p>The goal of this project is to develop Artificial Intelligence (AI) to improve MRI guided interventions by automatically tracking tumors and automatically steering MRI acquisitions. We have an MRI scanner that can be digitally steered. AI can be developed such that it can track an object from a series of MRI images. The developed AI output can be used to steer the MRI. With the improved visualization, interventions can become more accurate in less time.</p>
 <h2>Tasks</h2>
-<p>In this pilot project, the focus is on simulated interventional MRI. The tasks are as follows:
-- Develop an MRI simulation module. Synthetic MRI image series should show moving tumor targets with an adjustable motion to simulate varying levels of difficulty.
-- Develop an AI tracking module that predicts the tumor target location from a series of MRI images.
-- Develop a demonstrator that compares conventional versus AI-driven interventional MRI </p>
+<p>In this pilot project, the focus is on simulated interventional MRI. The tasks are as follows:</p>
+<ul>
+<li>Develop an MRI simulation module. Synthetic MRI image series should show moving tumor targets with an adjustable motion to simulate varying levels of difficulty.</li>
+<li>Develop an AI tracking module that predicts the tumor target location from a series of MRI images.</li>
+<li>Develop a demonstrator that compares conventional versus AI-driven interventional MRI </li>
+</ul>
 <h2>Requirements</h2>
 <ul>
 <li>
